<resources>
    <string name="app_name">Vision PPI</string>
    <string name="login">Login</string>
    <string name="toast_welcome">Welcome %1$s</string>
    <string name="username">Username</string>
    <string name="progress_message_login">Logging In</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="create_an_account">Create an account</string>

    x

    <string name="error_validation_blank">%1$s cannot be blank</string>
    <string name="error_validation_minimum_chars">%1$s cannot be less than %2$d characters</string>
    <string name="error_validation_cannot_contain_spaces">%1$s cannot contain %2$s</string>

    <string name="error_server_down">Server Down, Try after some time</string>

    <string name="not_contain_username">Spaces</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login_using_password_confirmation">Are you sure you want to login using Password?
    </string>
    <string name="enter_passcode">Enter 4 digit Passcode</string>
    <string name="error_passcode">Passcode should be of 4 digit</string>
    <string name="incorrect_passcode">Incorrect Passcode</string>
    <string name="incorrect_passcode_more_than_three">You have entered incorrect Passcode more than
        3 times
    </string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="passcode_setup">Setup a passcode to login</string>
    <string name="reenter_passcode">Please re-enter your passcode</string>
    <string name="passcode_does_not_match">Passcode does not match.</string>
    <string name="forgot_passcode">Forgot passcode, login manually</string>
    <string name="proceed">Proceed</string>
    <string name="logout">Logout</string>
    <!--Customer care details-->

    <!--Material Dialog-->
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_permission_denied">Permission Denied</string>
    <string name="dialog_action_i_am_sure">I\'M Sure</string>
    <string name="dialog_action_re_try">Retry</string>
    <string name="dialog_action_app_settings">App Settings</string>
    <string name="dialog_message_phone_state_permission_denied_prompt">This permission is required
        to show currency according to your country.Are you sure you want to deny it?
    </string>
    <string name="dialog_message_phone_state_permission_never_ask_again">You have denied permission
        to fetch Phone State, without this permission currency might not be shown in proper format.
        Please enable it in settings
    </string>
    <string name="msg_setting_activity_not_found">Something went wrong finding Settings activity.
        \nGo to \'Settings\' and grant permission manually.
    </string>

    <!--Format Strings-->

    <string name="package_name" translatable="false">package</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>


    <string name="language_type" translatable="false">language_type</string>

    <string name="to" translatable="false">TODO</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Incorrect credentials entered</string>
    <string name="invalid_username">Invalid username length</string>
    <string name="invalid_passlen">Invalid password length</string>
    <string name="tenantId" translatable="false">default</string>
    <string name="contentType" translatable="false">application/json</string>
    <string name="demoURL" translatable="false">https://demo.mifos.io/fineract-provider/api/v1/</string>
    <string name="pref_file_name">User Details</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="install_vision">Download the Vision PPI to ease the process of filing PPI Surveys by automating the process.</string>
    <string name="download_link">Download Now: https://github.com/openMF/ppi-vision</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="share">Share App</string>
    <string name="user_profile" translatable="false">user_profile</string>
    <string name="username_key">Username:</string>
    <string name="user_id">User ID:</string>
    <string name="office_name">Office Name:</string>
    <string name="office_id">Office ID:</string>
    <string name="staff_id">Staff ID:</string>
    <string name="staff_disp_name">Staff Display Name:</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome to Vision PPI</string>
    <string name="search_desc">Enter name or account number of client</string>
    <string name="empty_query">Search query is empty!</string>
    <string name="search_unsuccessful">No records match search query</string>
    <string name="client_id">Client Id:</string>
    <string name="account_no">Account No.:</string>
    <string name="mobile_no">Mobile No.:</string>
    <string name="take_new_survey">Take New Survey</string>
    <string name="view_previous_surveys">Previous Surveys</string>
    <string name="client_type">Client Type:</string>
    <string name="exception">Exception:</string>
    <string name="response">Response</string>
    <string name="points">Points</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="open_camera">Open Camera</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="analyze_images">Analyze Images</string>
    <string name="cant_open_gallery">Cannot open gallery</string>
    <string name="cv_logo" translatable="false">cv_logo</string>
    <string name="search_query">Enter name/account number of client</string>
    <string name="search_results">Client Results</string>


</resources>
