<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ll_margin" android:paddingBottom="@dimen/text_input_spacing"
                    android:clipToPadding="false">

                <LinearLayout
                        android:layout_height="134dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:background="@color/lightGray"
                        android:layout_marginBottom="@dimen/text_input_spacing">

                    <ImageView
                            android:layout_width="146dp"
                            android:layout_height="145dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/user_profile_logo"
                            android:id="@+id/client_image"
                            android:contentDescription="@string/user_profile"
                            android:layout_marginTop="@dimen/text_input_spacing"
                            android:layout_marginBottom="@dimen/text_input_spacing"/>

                    <TextView
                            android:text=""
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_input_spacing"
                            android:id="@+id/client_name_value"
                            android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/client_id"
                            android:id="@+id/client_id_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/client_id_value"
                            style="@style/user_profile_value"
                            android:layout_height="match_parent"/>
                </LinearLayout>


                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/account_no"
                            android:id="@+id/account_no_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/account_no_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"
                    />
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/mobile_no"
                            android:id="@+id/mobile_no_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/mobile_no_value"
                            style="@style/user_profile_value"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/client_type"
                            android:id="@+id/client_type_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/client_type_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"
                    />
                </LinearLayout>
                <Button
                        android:text="@string/take_new_survey"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/new_survey_btn"
                        android:layout_marginBottom="@dimen/text_input_spacing"
                        android:layout_marginLeft="@dimen/text_input_spacing"
                        android:layout_marginRight="@dimen/text_input_spacing"/>

                <Button
                        android:text="@string/view_previous_surveys"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/prev_survey_btn"
                        android:layout_marginLeft="@dimen/text_input_spacing"
                        android:layout_marginRight="@dimen/text_input_spacing"/>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>