<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <LinearLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <include layout="@layout/toolbar"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ll_margin">

                <LinearLayout
                        android:layout_height="134dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:background="@color/lightGray" android:layout_marginBottom="@dimen/text_input_spacing">

                    <ImageView
                            android:layout_width="146dp"
                            android:layout_height="145dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/user_profile_logo"
                            android:id="@+id/imageView4"
                            android:contentDescription="@string/user_profile"
                            android:layout_marginTop="@dimen/text_input_spacing"
                            android:layout_marginBottom="@dimen/text_input_spacing"/>

                    <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textAlignment="center"
                            android:textSize="@dimen/text_input_spacing"
                            android:id="@+id/username_value"
                            android:layout_weight="1"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/user_id"
                            android:id="@+id/user_id_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/user_id_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"/>
                </LinearLayout>


                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/office_name"
                            android:id="@+id/office_name_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/office_name_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"
                    />
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/office_id"
                            android:id="@+id/office_id_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/office_id_value"
                            style="@style/user_profile_value"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/staff_id"
                            android:id="@+id/staff_id_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/staff_id_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"
                    />
                </LinearLayout>

                <LinearLayout
                        android:layout_height="wrap_content"
                        style="@style/user_profile_row">

                    <TextView
                            android:text="@string/staff_disp_name"
                            android:id="@+id/staff_disp_name_key"
                            style="@style/user_profile_key"/>
                    <TextView
                            android:text=""
                            android:id="@+id/staff_disp_name_value"
                            style="@style/user_profile_value" android:layout_height="match_parent"
                    />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>