<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/login_padding_right"
            android:paddingLeft="@dimen/login_padding_left"
            android:paddingRight="@dimen/login_padding_right"
            android:paddingStart="@dimen/login_padding_left"
            android:paddingTop="@dimen/login_padding_left">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/ll_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/text_input_spacing"
                android:layout_marginBottom="@dimen/text_input_spacing"
                android:padding="@dimen/ll_margin" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.725">

                <ImageView
                    android:layout_width="185dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/ppi_logo"
                    android:layout_weight="1"
                    android:contentDescription="@string/to"/>
            </LinearLayout>

            <!-- Username  Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent">

                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:drawableLeft="@drawable/ic_wrapped_person_black_24dp"
                    android:drawablePadding="@dimen/layout_padding_8dp"
                    android:drawableStart="@drawable/ic_wrapped_person_black_24dp"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true">

                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:drawableLeft="@drawable/ic_wrapped_lock_black_24dp"
                    android:drawablePadding="@dimen/layout_padding_8dp"
                    android:drawableStart="@drawable/ic_wrapped_lock_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/login_margin_top"
                android:layout_width="match_parent"
                android:text="@string/login"
                android:onClick="onLoginClicked"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
